<resources>
    <string name="app_name">My Application</string>

    <string name="start">GO!</string>
    <string name="title">Cross the Kitchen: Remy\'s Adventure</string>
    <string name="charSelect">Choose Your Character!</string>
    <string name="difSelect">Choose Your Difficulty!</string>
    <string name="nameSelect">Enter Your Name:</string>
    <string name="easy">Easy</string>
    <string name="med">Medium</string>
    <string name="hard">Hard</string>
    <string name="livesCounter">Lives: </string>
    <string name="UP">Up</string>
    <string name="DOWN">Down</string>
    <string name="RIGHT">Right</string>
    <string name="LEFT">Left</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="deathScreen">You Died</string>
    <string name="restart">Restart</string>
    <string name="restartText">Click to Restart!</string>
    <string name="exit">Exit</string>
    <string name="you_win">You Win!</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>