<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="26dp"
        android:text="@string/charSelect"
        android:textColor="@color/text_color"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="300dp"
        android:text="@string/difSelect"
        android:textColor="@color/text_color"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/difRadioGroup"
        android:layout_width="266dp"
        android:layout_height="164dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="340dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/med" />

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard" />
    </RadioGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="576dp"
        android:text="@string/start"
        android:onClick="nameSelect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="83dp"
        android:layout_height="216dp"
        android:layout_marginStart="157dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mouse" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="83dp"
        android:layout_height="216dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rat" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="83dp"
        android:layout_height="216dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/remy" />

    <RadioGroup
        android:id="@+id/charRadioGroup"
        android:layout_width="308dp"
        android:layout_height="78dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="176dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/char3Button"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:text="" />

        <RadioButton
            android:id="@+id/char1Button"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <RadioButton
            android:id="@+id/char2Button"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>