<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".MainActivity4">

    <TextView
        android:id="@+id/nameDisplay"
        android:layout_width="240dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/livesDisplay"
        android:layout_width="71dp"
        android:layout_height="31dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="48dp"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/livesCounter"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficultyDisplay"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="419dp"
        android:layout_height="480dp"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />
    <Button
        android:id="@+id/up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="#8ABDE3"
        android:onClick="moveUp"
        android:text="@string/UP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/down_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_marginTop="90dp"
        android:backgroundTint="#8ABDE3"
        android:onClick="moveDown"
        android:text="@string/DOWN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/right_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#8ABDE3"
        android:onClick="moveRight"
        android:text="@string/RIGHT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/left_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="70dp"
        android:backgroundTint="#8ABDE3"
        android:onClick="moveLeft"
        android:text="@string/LEFT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/river_four"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/river_three"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/river_two"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/river_one"
        android:layout_width="600dp"
        android:layout_height="40dp"
        android:layout_marginStart="-100dp"
        android:layout_marginTop="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <ImageView
        android:id="@+id/charSprite"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="580dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/btn_dialog" />

    <RelativeLayout
        android:id="@+id/road_one"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="540dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/road_two"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="500dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="665dp">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/road_three"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="460dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="665dp">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/road_four"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="420dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="665dp">

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/road_five"
        android:layout_width="520dp"
        android:layout_height="40dp"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="380dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="77dp"
        tools:layout_editor_absoluteY="665dp">

    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="Score:"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toEndOf="@+id/nameDisplay"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreDisplay"
        android:layout_width="62dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="10pt"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>